syntax = "proto3";

package chremoas.roles;

import "common.proto";

service Roles {
    rpc AddRole (Role) returns (NilMessage) {};
    rpc UpdateRole (UpdateInfo) returns (NilMessage) {};
    rpc RemoveRole (Role) returns (NilMessage) {};
    rpc GetRoles (NilMessage) returns (GetRolesResponse) {};
    rpc GetRole (Role) returns (Role) {};
    rpc SyncRoles (NilMessage) returns (SyncResponse) {};
    rpc GetRoleKeys (NilMessage) returns (StringList) {};
    rpc GetRoleTypes (NilMessage) returns (StringList) {};
    rpc SyncMembers (NilMessage) returns (SyncResponse) {};
}

message StringList {
    repeated string Value = 1;
}

message Role {
    string Type = 1;
    string ShortName = 2;
    string FilterA = 3;
    string FilterB = 4;

    // Discord
    string Name = 5;
    int32 Color = 6;
    bool Hoist = 7;
    int32 Position = 8;
    int32 Permissions = 9;
    bool Managed = 10;
    bool Mentionable = 11;
}

message UpdateInfo {
    string Name = 1;
    string Key = 2;
    string Value = 3;
}

message GetRolesResponse {
    repeated Role Roles = 1;
}

message SyncResponse {
    repeated string Added = 1;
    repeated string Removed = 2;
}
